# backend-openapi/openapi.yaml
@@ -166,9 +166,9 @@ components:
       enum:
         - 'CREATED'
         - 'PLANNED'
-        - 'FAILURE'
         - 'CRAWLING'
-        - 'FINISHED'
+        - 'FAILURE'
+        - 'SUCCESS'
     NullableExecutionTime:
       type: string
       format: date-time
